--- a/intro.html
+++ b/intro.html
@@ -1,1 +1,2 @@
 hello, this is Adrian, I am studying at the UNH bootcamp
+<img>https://vignette.wikia.nocookie.net/rockosmodernlife/images/5/5e/Rocko_Wallaby.png/>
